# realtime-mrs

./: .gitignore  MIGRATION_GUIDE.md  README.md  README_Data_Recording.md  README_LSL_Integration.md  README_MODULAR.md  README_MRS_Sequence_Analysis.md  README_R_Statistical_Analysis.md  SETUP_POETRY.md  STATISTICAL_ANALYSIS_SUMMARY.md  config.py  config.yaml  data_analysis.py  ei_display_task.py  ei_display_task_new.py  ei_tcp_event_listener.py  experiment_data_recorder.py  finger_tapping_data.csv  fsl_mrs_data_generator.py  fsl_mrs_lsl_publisher.py  logger.py  lsl_ei_receiver.py  m1_tapping_task.py  menu.py  mrs_sequence_analysis.py  orientation_discrimination_data.csv  power_analysis.R  psychopy_display_manager.py  pyproject.toml  requirements.txt  run.py  run_realtime_mrs.sh  sent_ei.py  setup.py  statistical_analysis.R  task_introductions.py  task_lsl_publishers.py  test_full_lsl_system.py  test_lsl_system.py  test_modular_package.py  (+2 more)
data/: m1_finger_tapping_data.csv  v1_orientation_test_001_2025-05-26_16h19.58.245.csv.csv  v1_orientation_test_001_2025-05-26_16h19.58.245.csv.psydat  v1_orientation_test_001_2025-05-26_17h06.11.599.csv.csv  v1_orientation_test_001_2025-05-26_17h06.11.599.csv.psydat
example_data/: simple_example_example_participant_example_session_20250528_142537.csv
examples/: simple_usage.py
realtime_mrs/: __init__.py  cli.py
realtime_mrs/core/: __init__.py  config.py  logger.py  utils.py
realtime_mrs/tasks/: __init__.py  base.py  ei_visualization.py  m1_tapping.py  v1_orientation.py
