[tool.poetry]
name = "realtime-mrs"
version = "0.1.0"
description = "Real-time MRS visualization system with FSL-MRS and Lab Streaming Layer integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "realtime_mrs", from = "."}]

[tool.poetry.dependencies]
python = "^3.8.1"
psychopy = ">=2023.1.0"
pyyaml = ">=6.0"
pylsl = ">=1.16.0"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
matplotlib = ">=3.5.0"
pandas = ">=1.3.0"
# Note: fsl-mrs is not included as a dependency since it may not be available via PyPI
# Install separately if needed: pip install fsl-mrs

[tool.poetry.extras]
# FSL-MRS should be installed separately if needed

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
realtime-mrs = "menu:main"
test-lsl = "test_lsl_system:test_lsl_system"
fsl-mrs-publisher = "fsl_mrs_lsl_publisher:main"
lsl-receiver = "lsl_ei_receiver:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
